kexample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asp-template-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: asp-template
  template:
    metadata:
      labels:
        app: asp-template
    spec:
      imagePullSecrets:
      - name: local-registry-secret
      containers:
      - name: asp-template-container
        image: debian3:5000/asp-template
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      
     #   volumeMounts:
     #   - name: host-folder
     #     mountPath: /path/in/container
     # volumes:
     # - name: host-folder
     #   hostPath:
     #     path: /path/on/host
      
        # env:
        # - name: ASPNETCORE_ENVIRONMENT
        #  value: "Production"
