kexample/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodets-template-service
spec:
  selector:
    app: nodets-template
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000 
  type: ClusterIP
