kexample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodets-template-ingress
spec:
  tls:
  - secretName: your-tls-secret
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    #  nginx.ingress.kubernetes.io/affinity: "true" # Enable session affinity
    #  nginx.ingress.kubernetes.io/affinity-mode: "ip" # IP-based session affinity
    #  nginx.ingress.kubernetes.io/affinity-type: "ip" # Use client IP for session affinity
    #  nginx.ingress.kubernetes.io/affinity-avg-latency-type: "wlc" # Use least connection method
spec:
  rules:
  - host: asptemplate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asp-template-service
            port:
              number: 8080

# openssl req -x509 -nodes -newkey rsa:2048 -keyout key.key -out cert.crt -days 365
# kubectl create secret tls your-tls-secret --cert=your-certificate.crt --key=your-private-key.key
